--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
@@ -2681,6 +2681,13 @@ ul.applications-summary.bulk-response {
 .select2-container .select2-choice {
   background: #F8F8F8; }
 
+.close-icon {
+  content: "\f057";
+  position: absolute;
+  right: 45px;
+  top: 10px;
+  z-index: 2; }
+
 html {
   font-size: 62.5%;
   /* 1 */ }
