--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,10 +1,17 @@
 ﻿@using SFA.Apprenticeships.Web.Manage.Constants
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.ProviderUser
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
 @{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var searchString = Model.VacancySummaries.SearchViewModel.SearchString;
+    var dashboardVacancySummariesSearchViewModel = Model.VacancySummaries.SearchViewModel;
+    var reviewTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Review ? " active" : "";
+    var metricsTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Metrics ? " active" : "";
+    var reviewTitle = !string.IsNullOrEmpty(dashboardVacancySummariesSearchViewModel.SearchString) ? dashboardVacancySummariesSearchViewModel.SearchString + "'s" : Model.AgencyUser.RegionalTeam.GetTitle();
+
 }
 @section metatags
 {
@@ -59,31 +66,31 @@
                     @Html.DropDownListFor(m => m.VacancySummaries.SearchViewModel.SearchMode, Model.VacancySummaries.SearchViewModel.SearchModes, new { @class = "grey-background" })
                     <div class="search-input-wrapper">
                         @Html.TextBoxFor(m => m.VacancySummaries.SearchViewModel.SearchString,
-                       new
-                       {
-                           title = "Search",
-                           placeholder = "Search vacancies",
-                           @class = "form-control",
-                           aria_label = "Search your vacancies"
-                       })
+                            new
+                            {
+                                title = "Search",
+                                placeholder = "Search vacancies",
+                                @class = "form-control",
+                                aria_label = "Search your vacancies"
+                            })
                         @Html.HiddenFor(m => m.VacancySummaries.SearchViewModel.SearchString)
+                        @if (!string.IsNullOrEmpty(searchString))
+                        {
+                            <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard,new DashboardVacancySummariesSearchViewModel())"
+                               class="notInterested link-unimp icon-black close-icon">
+                                <i class="fa fa-times-circle" aria-hidden="true"></i>                                
+                            </a>
+                        }
                     </div>
                     <button type="submit" id="search-vacancies-button-manage" class="search-btn no-margins button" name="DashboardAction" value="SearchVacancies">
                         <i class="fa fa-search"></i>
-                    </button>                 
+                    </button>
                 </div>
             </div>
         </div>
         <div class="grid-wrapper">
             <div class="grid grid-1-1">
                 <nav class="tabbed-nav">
-                    @{
-                        var dashboardVacancySummariesSearchViewModel = Model.VacancySummaries.SearchViewModel;
-                        var reviewTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Review ? " active" : "";
-                        var metricsTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Metrics ? " active" : "";
-                        var reviewTitle = !string.IsNullOrEmpty(dashboardVacancySummariesSearchViewModel.SearchString) ? dashboardVacancySummariesSearchViewModel.SearchString + "'s" : Model.AgencyUser.RegionalTeam.GetTitle();
-                    }
-
                     @Html.RouteLink(reviewTitle + " vacancies", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(dashboardVacancySummariesSearchViewModel, DashboardVacancySummariesMode.Review), new { @class = "tabbed-tab no-js" + reviewTabControlClass })
                     @Html.RouteLink("All teams", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(dashboardVacancySummariesSearchViewModel, DashboardVacancySummariesMode.Metrics), new { @class = "tabbed-tab no-js" + metricsTabControlClass })
                 </nav>
@@ -101,13 +108,13 @@
                 @Html.Partial("_DashboardTeamMetrics", Model)
             }
         </div>
-                        }
+    }
 
-                        if (Model.AgencyUser.RoleId == "Helpdesk_advisor")
-                        {
-                            @Html.Partial("_DashboardHelpDesk")
-                            }
-                        }
+    if (Model.AgencyUser.RoleId == "Helpdesk_advisor")
+    {
+        @Html.Partial("_DashboardHelpDesk")
+    }
+}
 
 <div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
     Loading
