--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -77,7 +77,7 @@
                         @if (!string.IsNullOrEmpty(searchString))
                         {
                             <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard,new DashboardVacancySummariesSearchViewModel())"
-                               class="notInterested link-unimp icon-black close-icon">
+                               class="close-icon">
                                 <i class="fa fa-times-circle" aria-hidden="true"></i>                                
                             </a>
                         }
