--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -158,8 +158,10 @@ input[type="search"]::-webkit-search-decoration {
  .close-icon{
      content:"\f057";
      position: absolute;
-    right: 45px;
+    right: 50px;
     top: 10px;
     z-index: 2;
+    color: #BFC1C3;
+    font-size:16px;
  }
 
