on close button click..redirect to home page.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -75,7 +75,7 @@
                         @Html.HiddenFor(m => m.VacancySummaries.SearchViewModel.SearchString)
                         @if (!string.IsNullOrEmpty(searchString))
                         {
-                            <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard,new DashboardVacancySummariesSearchViewModel())"
+                            <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard)"
                                class="close-icon">
                                 <i class="fa fa-times-circle" aria-hidden="true"></i>                                
                             </a>
