ra-496: make content and ui changes as shown in the wireframes.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -4,7 +4,7 @@
 @if (Model.Status.CanManageVacancyDates())
 {
     <p class="small-btm-margin">
-        @Html.RouteLink("Change vacancy dates", RecruitmentRouteNames.ManageDates, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+        @Html.RouteLink("Close or extend vacancy", RecruitmentRouteNames.ManageDates, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
     </p>
 }
 
