--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
@@ -6,11 +6,11 @@
 @model FurtherVacancyDetailsViewModel
 
 @{
-    ViewBag.Title = "Recruit an Apprentice - Change vacancy dates";
+    ViewBag.Title = "Recruit an Apprentice - Close or extend vacancy";
 }
 
 <h1 class="heading-xlarge">
-    Change vacancy dates
+    Close or extend vacancy
 </h1>
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ManageDates, FormMethod.Post))
@@ -32,21 +32,23 @@
     @Html.HiddenFor(m => m.Wage.HoursPerWeek)
     @Html.HiddenFor(m => m.VacancyDatesViewModel.VacancyStatus)
 
+    <div>
+        To close a vacancy, add today's date. The vacancy will close at midnight. This <br />
+        is to allow candidates time to complete their applications.
+    </div>
+    <br/>
+    <br/>
     <fieldset class="form-group inline-fixed date-input @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.VacancyDatesViewModel.ClosingDate))">
         <a name="@Html.NameFor(m => m.VacancyDatesViewModel.ClosingDate).ToString().Replace(".", "_").ToLower()"></a>
-        <legend class="form-label">@Model.GetMetadata(m => m.VacancyDatesViewModel.ClosingDate).DisplayName</legend>
+        <h3 class="heading-small">@Model.GetMetadata(m => m.VacancyDatesViewModel.ClosingDate).DisplayName</h3>
         @Html.EditorFor(m => m.VacancyDatesViewModel.ClosingDate)
         @Html.ValidationMessageWithSeverityFor(m => m.VacancyDatesViewModel.ClosingDate, Html.GetValidationType(m => m.VacancyDatesViewModel.ClosingDate))
 
-        <div>
-            We advise using a date more than two weeks from now<br />
-            Vacancies will close at midnight on your chosen date
-        </div>
     </fieldset>
 
     <fieldset class="form-group inline-fixed date-input @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.VacancyDatesViewModel.PossibleStartDate))">
         <a name="@Html.NameFor(m => m.VacancyDatesViewModel.PossibleStartDate).ToString().Replace(".", "_").ToLower()"></a>
-        <legend class="form-label">@Model.GetMetadata(m => m.VacancyDatesViewModel.PossibleStartDate).DisplayName</legend>
+        <h3 class="heading-small">@Model.GetMetadata(m => m.VacancyDatesViewModel.PossibleStartDate).DisplayName</h3>
         @Html.EditorFor(m => m.VacancyDatesViewModel.PossibleStartDate)
         @Html.ValidationMessageWithSeverityFor(m => m.VacancyDatesViewModel.PossibleStartDate, Html.GetValidationType(m => m.VacancyDatesViewModel.PossibleStartDate))
     </fieldset>
@@ -67,4 +69,4 @@
             @Html.RouteLink("Cancel", routeName, viewModel);
         }
     </div>
-}
+            }
