--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -2678,6 +2678,18 @@ ul.applications-summary.bulk-response {
 .three-column li {
   float: left; }
 
+.select2-container .select2-choice {
+  background: #F8F8F8; }
+
+.close-icon {
+  content: "\f057";
+  position: absolute;
+  right: 50px;
+  top: 10px;
+  z-index: 2;
+  color: #BFC1C3;
+  font-size: 16px; }
+
 html {
   font-size: 62.5%;
   /* 1 */ }
