--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/forms/_form-validation.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/forms/_form-validation.scss
@@ -174,3 +174,27 @@
 .verified {
   color: $turquoise;
 }
+
+label.vertically-stacked {
+    display: block;
+    float: left;
+    clear: left;
+}
+
+div.nested-panel-1 {
+    clear: both;
+    background: #ffffff;
+    border-left: 3px solid #999999;
+    box-sizing: content-box;
+    margin-left: 0px;
+}
+
+fieldset.nested-panel-2 {
+    margin-left: 10px;
+}
+
+.wage-reason-display {
+    background: #ffffff;
+    border-left: 3px solid #999999;
+    padding: 10px;
+}
