RA-501/511: Added analytics JS to candidate

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_ErrorLayout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_ErrorLayout.cshtml
@@ -6,6 +6,16 @@
 <html lang="en-GB" class="not-ie8">
 <!--<![endif]-->
 <head>
+@if (ViewBag.EnableGoogleTagManager)
+{
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','@ViewBag.GoogleContainerId');</script>
+<!-- End Google Tag Manager -->
+}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
@@ -15,9 +25,29 @@
     <!--[if lte IE 8]>@Styles.Render("~/bundles/ie8")<![endif]-->
     <link rel="shortcut icon" href="@Url.CdnImage("favicon.ico")" type="image/x-icon">
     @Styles.Render("~/bundles/font-awesome")
+@if (ViewBag.EnableAppInsights)
+{
+<script type="text/javascript">
+  var appInsights=window.appInsights||function(config){
+    function i(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s="AuthenticatedUserContext",h="start",c="stop",l="Track",a=l+"Event",v=l+"Page",y=u.createElement(o),r,f;y.src=config.url||"https://az416426.vo.msecnd.net/scripts/a/ai.0.js";u.getElementsByTagName(o)[0].parentNode.appendChild(y);try{t.cookie=u.cookie}catch(p){}for(t.queue=[],t.version="1.0",r=["Event","Exception","Metric","PageView","Trace","Dependency"];r.length;)i("track"+r.pop());return i("set"+s),i("clear"+s),i(h+a),i(c+a),i(h+v),i(c+v),i("flush"),config.disableExceptionTracking||(r="onerror",i("_"+r),f=e[r],e[r]=function(config,i,u,e,o){var s=f&&f(config,i,u,e,o);return s!==!0&&t["_"+r](config,i,u,e,o),s}),t
+    }({
+        instrumentationKey:"@ViewBag.AppInsightsInstrumentationKey"
+    });
+       
+    window.appInsights=appInsights;
+    appInsights.trackPageView();
+</script>
+}
     @Html.Partial("_Scripts")
 </head>
 <body>
+@if (ViewBag.EnableGoogleTagManager)
+{
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="@("https://www.googletagmanager.com/ns.html?id=" + ViewBag.GoogleContainerId)"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+}
     <div class="skiplink-container">
         <div>
             <a href="#main" class="skiplink">Skip to main content</a>
