RA-501: Added Google analytics cookies to privacy pages

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Privacy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Privacy.cshtml
@@ -39,9 +39,9 @@
 </section>
 
 <section class="text">
-    <h2 class="heading-medium">Webtrends analytics cookie</h2>
+    <h2 class="heading-medium">Webtrends analytics cookies</h2>
     <p>We use Webtrends to collect information about how you use the service. This information helps us to make improvements.</p>
-    <p>The Webtrends analytics cookie collects and stores information about:</p>
+    <p>The Webtrends analytics cookies collect and store information about:</p>
     <ul>
         <li>the pages you visit</li>
         <li>how long you spend on each page</li>
@@ -111,6 +111,58 @@
             </td>
             <td>
                 5 years
+            </td>
+        </tr>
+    </table>
+</section>
+
+<section class="text">
+    <h2 class="heading-medium">Measuring website usage (Google Analytics)</h2>
+    <p>We also use Google Analytics software to collect information about how you use this service. We do this to help make sure the site is meeting the needs of its users and to help us make improvements.</p>
+    <p>We don’t collect or store your personal information (for example, your name or address) so this information can’t be used to identify who you are.</p>
+    <p>We don’t allow Google to use or share our analytics data.</p>
+    <h2 class="heading-medium">Google Analytics cookies</h2>
+    <p>Google Analytics sets the following cookies:</p>
+    <table>
+        <colgroup>
+            <col class="t20" />
+            <col class="t60" />
+            <col class="t20" />
+            <col />
+        </colgroup>
+        <thead>
+            <tr>
+                <th>
+                    Name
+                </th>
+                <th>
+                    Purpose
+                </th>
+                <th>
+                    Expires
+                </th>
+            </tr>
+        </thead>
+        <tr>
+            <td>
+                _ga
+            </td>
+            <td>
+                Allows Google to uniquely identify you as a visitor.
+            </td>
+            <td>
+                2 years
+            </td>
+        </tr>
+        <tr>
+            <td>
+                _gat
+            </td>
+            <td>
+                Used to manage the rate at which page view requests are made
+            </td>
+            <td>
+                10 minutes
             </td>
         </tr>
     </table>
@@ -196,28 +248,6 @@
             </td>
             <td>
                 2 years
-            </td>
-        </tr>
-        <tr>
-            <td>
-                _ga
-            </td>
-            <td>
-                Allows Google to uniquely identify you as a visitor.
-            </td>
-            <td>
-                2 years
-            </td>
-        </tr>
-        <tr>
-            <td>
-                _gat
-            </td>
-            <td>
-                Helps reduce congestion if there are too many visitors at any time.
-            </td>
-            <td>
-                10 minutes
             </td>
         </tr>
     </table>
