Fixed up date time view model styles and validation and added support for warnings

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -180,5 +180,7 @@
 // end inline search bar
 
 $path: "/Content/_assets/img/";
+$warning-colour: #2b8cc4;
 
 @import "_govuk-elements";
+@import "_form-warnings";
