--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
@@ -1649,3 +1649,62 @@ input[type=number] {
   details summary:not([tabindex]) {
     display: list-item;
     display: revert; } }
+
+.warning {
+  margin-right: 15px;
+  border-left: 4px solid #2b8cc4;
+  padding-left: 10px; }
+  .warning > .form-control {
+    border: 4px solid #2b8cc4; }
+  @media (min-width: 641px) {
+    .warning {
+      border-left: 5px solid #2b8cc4;
+      padding-left: 15px; } }
+
+.warning-message {
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 700;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #2b8cc4;
+  display: block;
+  clear: both;
+  margin: 0;
+  padding: 2px 0; }
+  @media (min-width: 641px) {
+    .warning-message {
+      font-size: 19px;
+      line-height: 1.31579; } }
+
+.form-label .warning-message,
+.form-label-bold .warning-message {
+  padding-top: 4px;
+  padding-bottom: 0; }
+
+.warning-summary {
+  border: 4px solid #2b8cc4;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px 10px; }
+  @media (min-width: 641px) {
+    .warning-summary {
+      border: 5px solid #2b8cc4;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      padding: 20px 15px 15px; } }
+  .warning-summary:focus {
+    outline: 3px solid #ffbf47; }
+  .warning-summary .warning-summary-heading {
+    margin-top: 0; }
+  .warning-summary p {
+    margin-bottom: 10px; }
+  .warning-summary .warning-summary-list {
+    padding-left: 0; }
+    @media (min-width: 641px) {
+      .warning-summary .warning-summary-list li {
+        margin-bottom: 5px; } }
+    .warning-summary .warning-summary-list a {
+      color: #2b8cc4;
+      font-weight: bold;
+      text-decoration: underline; }
