--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -43,7 +43,7 @@
 
     </div>
 
-    <div class="error-summary" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+    <div class="warning-summary" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
         <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
             Message to alert the user to a problem goes here
