--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -1,183 +1,8 @@
-﻿// layout and margin/padding overrides
-.force-full-width {
-    width: 100% !important;
-}
+﻿@import "_sfa-custom-layouts";
 
-.no-margins {
-    margin: 0 !important;
-}
-
-.sfa-medium-bottom-margin {
-    margin-bottom: 10px !important;
-}
-
-.sfa-large-bottom-margin {
-    margin-bottom: 15px !important;
-}
-
-.sfa-xlarge-bottom-margin {
-    margin-bottom: 30px !important;
-}
-// end layout and margin/padding overrides
-
-// button links
-.button-link {
-    font-family: "nta",Arial,sans-serif;
-    font-size: 19px;
-    line-height: 1.31579;
-    font-weight: 400;
-    text-transform: none;
-    background: none;
-    border: none;
-    color: #005ea5;
-    cursor: pointer;
-    display: inline-block;
-    line-height: 1.4;
-    margin: 0 15px 15px 0;
-    padding: 7px 10px 5px 0;
-    text-decoration: underline;
-    vertical-align: top;
-    -webkit-font-smoothing: antialiased
-}
-
-@media(max-width: 640px) {
-    .button-link {
-        font-size:16px;
-        line-height: 1.25
-    }
-}
-
-.inline-button .button-link {
-    margin-bottom: 0
-}
-
-.inline-text .button-link {
-    margin: 0;
-    padding: 0;
-    line-height: 1.3
-}
-
-.button-link:hover {
-    color: #2e8aca
-}
-
-.button-link:focus {
-    outline: 3px solid #ffbf47
-}
-// end button links
-
-// tabs
-.tabbed-nav {
-    border-bottom: 1px solid #bfc1c3
-}
-
-.tabbed-tab {
-    border: 1px solid transparent;
-    display: inline-block;
-    margin-bottom: -1px;
-    margin-right: 1px;
-    padding: 15px 10px
-}
-
-.tabbed-tab.active {
-    background: #fff;
-    border-color: #bfc1c3;
-    border-bottom-color: #fff;
-    color: #0b0c0c;
-    text-decoration: none
-}
-
-.tabbed-tab.active:hover {
-    color: inherit;
-    cursor: default;
-    text-decoration: none
-}
-
-.tabbed-tab:hover {
-    text-decoration: underline
-}
-
-.tabbed-tab:focus {
-    outline: none
-}
-
-.tabbed-content {
-    border: 1px solid #bfc1c3;
-    border-top: 0;
-    display: none;
-    margin-bottom: 15px;
-    padding: 30px 10px 0
-}
-
-.tabbed-content.active {
-    display: block
-}
-
-.tabbed-element {
-    display: none
-}
-
-.tabbed-element.active {
-    display: inline-block
-}
-// end tabs
-
-// inline search bar
-.search-bar {
-    overflow: hidden;
-    position: relative
-}
-
-.search-bar select {
-    position: absolute;
-    left: 0;
-    width: 75px;
-}
-
-.search-bar .search-input-wrapper {
-    float: left;
-    box-sizing: border-box;
-    padding-left: 74px;
-    padding-right: 47px;
-    width: 100%
-}
-
-.search-bar .search-input-wrapper input[type="text"] {
-    padding-top: 7px;
-    padding-bottom: 4px;
-    padding-left: 7px;
-    box-sizing: border-box;
-    width: 100%
-}
-
-.search-bar .reset-search {
-    position: absolute;
-    overflow: hidden;
-    right: 53px;
-    top: 8px
-}
-
-.search-bar .reset-search span {
-    position: absolute;
-    left: -5000px
-}
-
-.search-bar .search-btn {
-    position: absolute;
-    overflow: hidden;
-    right: 0;
-    font-size: 18px;
-    padding-bottom: 6px;
-    padding-left: 13px;
-    padding-right: 12px;
-    width: 48px
-}
-
-.search-bar .search-btn span {
-    position: absolute;
-    left: -5000px
-}
-// end inline search bar
+@import "_button-links";
+@import "_tabbed-nav";
+@import "_inline-search";
 
 $path: "/Content/_assets/img/";
 $warning-colour: #2b8cc4;
